# Proyecto_Robotica_Industrial

devel/: .catkin  .rosinstall  local_setup.sh
devel/include/entrega1_ri/: ArrayXY.h
devel/lib/ar_track_alvar/: createMarker  findMarkerBundles  findMarkerBundlesNoKinect  individualMarkers  individualMarkersNoKinect  trainMarkerBundle
devel/lib/dynamixel_workbench_controllers/: find_dynamixel
devel/lib/dynamixel_workbench_operators/: joint_operator  wheel_operator
devel/lib/open_manipulator_control_gui/: open_manipulator_control_gui
devel/lib/open_manipulator_controller/: open_manipulator_controller
devel/lib/open_manipulator_hw/: omx_control_node
src/entrega1_ri/: CMakeLists.txt  package.xml
src/entrega1_ri/launch/: lab202.launch
src/entrega1_ri/models/robotica_industrial/: model.config  model.sdf
src/entrega1_ri/src/: Lidar.py  Posicion.py  envio.py  functions.py  graficar_orientacion_control.py  graficarxy_control.py  gripper_controller.py  gripper_controller_implementacion.py  markers.py  motion_sequence_controller.py  motion_sequence_controller_implementacion.py  movimiento_lab.py  movimiento_lab_con_control.py  movimiento_lab_con_control_objetos.py  movimiento_lab_sin_control.py  open_manipulator_controller.py  open_manipulator_controller_implementacion.py  open_manipulator_f1.py  open_manipulator_f1_v1.py  open_manipulator_final_implementacion.py  open_manipulator_final_simulacion.py  open_manipulator_markers.py  open_manipulator_testing.py  plot_lidar.py  prueba.py  prueba_conexion_arduino.py
src/entrega1_ri/worlds/: lab202.world
(+96 files in other folders)
